# cpp_playground

./: CMakeLists.txt  README.md  hello_world.cpp  maps.cpp  memmory_management.md
src/: echo.cpp  hello_world.cpp  maps.cpp  memory_allocation_vs_pooling.cpp  move_example_1.cpp  move_example_2.cpp  pointer_indirection.cpp
src/maelstorm/: echo.cpp  rpc.cpp
test/maelstorm/: test_rpc.cpp
